--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The LVT - Kho phim chất lượng của bạn</title>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js" defer></script>
     <link rel="shortcut icon" href="~/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="~/css/site.css">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body id="top">
@@ -37,12 +42,12 @@
                     <select name="language" id="language">
                         <option value="vi">VN</option>
                         <option value="en">EN</option>
-                        
+
                     </select>
                 </div>
 
                 <a asp-controller="Asset" asp-action="Login"> <button class="btn text-white fw-bold rounded-pill px-4 py-2" style="border: 2px solid #e2d703">Đăng nhập</button> </a>
-                
+
 
             </div>
 
@@ -230,7 +235,7 @@
                 </p>
 
                 <img src="~/assets/images/footer-bottom-img.png" alt="Online banking companies logo"
-                    class="footer-bottom-img">
+                     class="footer-bottom-img">
 
             </div>
         </div>
@@ -241,7 +246,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    
+
 
     <a href="#top" class="go-top" data-go-top>
         <ion-icon name="chevron-up"></ion-icon>
