--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                         {
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Thông Tin Chi Tiết</a></li>
-                                <li><a class="dropdown-item" href="#">Đơn Mua</a></li>
+                                <li><a class="dropdown-item" asp-action="MyBill" asp-controller="Bill">Đơn Mua</a></li>
                                 <li><a class="dropdown-item" asp-action="LogOut" asp-controller="Asset">Đăng Xuất</a></li>
                             </ul>
 
