--- a/Movies.WebApp/Views/Asset/SignUp.cshtml
+++ b/Movies.WebApp/Views/Asset/SignUp.cshtml
@@ -103,7 +103,7 @@
                         </select>
                     </div>
                     <!-- Submit Button -->
-                    <button type="submit" class="btn btn-primary btn-block">Đăng ký</button>
+                    <button type="submit" class="btn btn-primary btn-block" asp-action="SignUp">Đăng ký</button>
                     <!-- Login Link -->
                     <div class="text-center mt-3">
                         Đã có tài khoản? <a asp-controller="Asset" asp-action="Login">Đăng nhập</a>
