--- a/Movies.WebApp/Views/Bill/PaymentSuccess.cshtml
+++ b/Movies.WebApp/Views/Bill/PaymentSuccess.cshtml
@@ -1,8 +1,9 @@
 ﻿<div class="d-flex justify-content-center bg-dark pt-5 pb-5 flex-column align-items-center">
     <div>
-        <h3 class="text-light">Bạn đã thanh toán thanh toán</h3>
+        <h3 class="text-light">Bạn đã thanh toán thành công</h3>
+        <h4 class="text-light text-center">@ViewBag.Title</h4>
     </div>
     <div class="pt-3 mb-3">
-        <a class="btn btn-success">Xem phim đã mua ngay!</a>
+        <a class="btn btn-success">Xem phim đã thuê ngay!</a>
     </div>
 </div>
