--- a/Movies.WebApp/Views/Movie/Detail.cshtml
+++ b/Movies.WebApp/Views/Movie/Detail.cshtml
@@ -91,11 +91,15 @@
                         <p class="text">Streaming Channels</p>
                     </div>
 
-                    <button class="btn btn-primary">
-                        <ion-icon name="play"></ion-icon>
+                  
+                        <a class="btn btn-primary" asp-action="CheckOut" asp-controller="Bill" asp-route-mId="@Model.Id">
+                            <ion-icon name="play"></ion-icon>
 
-                        <span>Thuê ngay</span>
-                    </button>
+                            <span>Thuê ngay</span>
+                        </a>
+                 
+
+                
 
                 </div>
 
