--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                 <ul class="navbar-list">
 
                     <li>
-                        <a href="~/index.html" class="navbar-link">Trang chủ</a>
+                        <a asp-action="Index" asp-controller="Home" class="navbar-link">Trang chủ</a>
                     </li>
 
                     <li>
